# streamDeck

./: .gitignore  CMakeLists.txt  README.md
firmware/: firmware.ino
software/: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  main.cpp
